deployments/my-django-project-ff8b6c9b/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-django-app
  labels:
    name: my-django-app
